# Sift

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
src/sift/: __init__.py  cli.py  config.py  schema.py
src/sift/eval/: __init__.py  harness.py  metrics.py
src/sift/infer/: __init__.py  predict.py
src/sift/retrieval/: __init__.py  bm25.py  recall.py
src/sift/teacher/: __init__.py  distill.py  reject.py
src/sift/train/: __init__.py  qlora.py
tests/: test_bm25.py  test_ground_truth.py  test_metrics.py  test_mining.py  test_retrieval_recall.py
